--- a/Java/1.SE/多线程.md
+++ b/Java/1.SE/多线程.md
@@ -1,4 +1,4 @@
-#并发&并行
+# 并发&并行
 
 * **并发：2个或多个事件在同一个时间段发生**
 * **并行：2个或多个事件在同一时刻发生（同时发生）**
@@ -7,7 +7,7 @@
 
 ---
 
-#进程&线程
+# 进程&线程
 
 * **进程：是指一个内存中运行的应用程序，每个进程都有一个独立的内存空间，一个应用程序可以同时运行多个进程；进程也是程序的一次执行过程，是系统运行程序的基本单位；系统运行一个程序即是一个进程从创建、运行到消亡的过程**
 * **线程是进程中的一个执行单元，负责当前进程中程序的执行，一个进程中至少有一个线程。一个进程中是可以有多个线程的，这个应用程序也可以称之为多线程程序**
@@ -15,9 +15,9 @@
 
 ---
 
-#创建线程
+# 创建线程
 
-##方式1
+## 方式1：Thread
 
 * **自定义类继承Thread类，重写run()方法**
 
@@ -37,7 +37,7 @@ public class BookThread extends Thread {
 new BookThread().start();
 ```
 
-##方式2
+## 方式2：Runnable
 
 * **实现Runnable接口，重写run()方法**
 
@@ -52,16 +52,16 @@ public class BookRunnable implements Runnable {
 new Thread(new BookRunnable()).start();
 ```
 
-##Thread类和Runnable接口的区别
+## Thread和Runnable区别
 
 * **避免单继承的局限性**
 * **增强程序扩展性，降低程序耦合**
 
 ---
 
-#线程同步机制
+# 线程同步机制
 
-##同步代码块
+## 方式1：同步代码块
 
 * **锁对象是任意对象**
 * **但是必须保证每个线程锁对象是同一个**
@@ -74,7 +74,7 @@ new Thread(new BookRunnable()).start();
     }
 ```
 
-##同步方法
+## 方式2：同步方法
 
 ```
 格式：
@@ -83,7 +83,7 @@ new Thread(new BookRunnable()).start();
     }
 ```
 
-##Lock锁
+## 方式3：Lock锁
 
 ```
 格式：
@@ -93,13 +93,13 @@ new Thread(new BookRunnable()).start();
     l.unlock(); //释放锁
 ```
 
-#等待唤醒机制
+# 等待唤醒机制
 
-##线程的状态
+## 线程的状态
 
 ![](assets/5cc3eff6fb277027e5000000.bmp)
 
-##等待唤醒案例
+## 等待唤醒案例
 
 * **适用多线程通信**
 * **wait()和notify()需要在同步锁内进行调用**
@@ -144,7 +144,7 @@ public class Test {
 }
 ```
 
-#线程池
+# 线程池
 
 ```
 public class Test {
