--- a/Java/1.SE/多线程.md
+++ b/Java/1.SE/多线程.md
@@ -59,6 +59,20 @@ new Thread(new BookRunnable()).start();
 
 ---
 
+# 线程的生命周期
+
+* **5种状态**
+
+新建（NEW）->就绪（Runnable）->运行（Running）->阻塞（Blocked）->死亡（Dead）
+
+* **新建&就绪**
+
+就绪调用线程start()方法，而不是调用run()方法
+
+* **运行&阻塞**
+
+ ![](assets/bfa2cae3e46e784720878a41dc91c8f9.png)
+
 # 线程同步机制
 
 ## 方式1：同步代码块
