--- a/Android/自定义控件/事件分发.md
+++ b/Android/自定义控件/事件分发.md
@@ -74,3 +74,13 @@ E: 触摸事件
 E: 触摸事件
 ```
 
+# 2.View&ViewGroup事件
+
+## 常用方法
+
+* **dispatchTouchEvent()：分发事件**
+* **onTouchEvent()：处理事件**
+* **onInterceptTouchEvent()：拦截事件**
+
+## Activity事件分发
+
