--- a/Kotlin/函数.md
+++ b/Kotlin/函数.md
@@ -19,3 +19,69 @@ println(sum(2, 8))
 val sum: (Int, Int) -> Int = { x, y -> x + y }
 ```
 
+# 标准库函数
+
+## TODO
+
+插入一个` TODO() `函数，然后当运行到这个函数的时候，程序就会抛出异常，告诉你这个函数还没实现呢？ 相当于从语言上定义了标记未完成状态的函数
+
+## repeat
+
+`repeat`函数就是执行参数 `action` 函数 `times` 次， 是一个 `for` 循环的简化形式
+
+```kotlin
+    repeat(2) {
+        println(it)
+    }
+```
+
+## run
+
+> 用法1：调用run函数块。返回值为函数块最后一行，或者指定return表达式
+
+```kotlin
+fun main(args: Array<String>) {
+    val run = run {
+        3
+        //return@run    返回Unit
+    }
+
+    println(run)
+}
+
+//输出
+3
+```
+
+> 用法2：调用某对象的run函数，在函数块内可以通过 *this* 指代该对象,返回值为函数块的最后一行或指定return表达式
+
+```kotlin
+fun main(args: Array<String>) {
+    val name="小黑"
+
+    name.run {
+        println(this)
+    }
+}
+
+//输出
+小黑
+```
+
+## with
+
+> 将某对象作为函数的参数，在函数块内可以通过 *this* 指代该对象。返回值为函数块的最后一行或指定return表达式
+
+```kotlin
+fun main(args: Array<String>) {
+    val name="小黑"
+
+    with(name) {
+        println(this)
+    }
+}
+
+//输出
+小黑
+```
+
