--- a/Kotlin/函数.md
+++ b/Kotlin/函数.md
@@ -1,11 +1,10 @@
 # Lambda表达式
 
-## 概念
+# 语法
+* **`->`前为参数列表**
 
-
-
-#Lambda表达式语法
-`->`前为参数列表，`->`后为函数体，lambda 表达式总是括在花括号中， 完整语法形式的参数声明放在花括号内，并有可选的类型标注， 函数体跟在一个 -> 符号之后。如果推断出的该 lambda 的返回类型不是 Unit，那么该 lambda 主体中的最后一个（或可能是单个）表达式会视为返回值。
+* **`->`后为函数体**
+* **如果推断出的该`lambda`的返回类型不是`Unit`，那么该 lambda 主体中的最后一个（或可能是单个）表达式会视为返回值**
 
 ```kotlin
 val sum = { x: Int, y: Int -> x + y }
