--- a/Kotlin/函数.md
+++ b/Kotlin/函数.md
@@ -1,22 +1,38 @@
 # Lambda表达式
 
-# 语法
-* **`->`前为参数列表**
+未声明的函数，可作为参数传递
 
-* **`->`后为函数体**
-* **如果推断出的该`lambda`的返回类型不是`Unit`，那么该 lambda 主体中的最后一个（或可能是单个）表达式会视为返回值**
+## 声明
 
 ```kotlin
-val sum = { x: Int, y: Int -> x + y }
+//格式
+变量标识符	表达式名字 = { 参数1，...，参数2	->
+	//隐式：括号最后一个表达式视为返回值
+    //显式：采用return明确返回
+}
 
-//使用如下：
-println(sum(2, 8))
+val add = { x: Int, y: Int ->
+    
+}
 ```
 
-如果我们把所有可选标注都留下
+## 作为参数
+
+* **Lambda表达式作为一个函数的最后参数，可将表达式提到（）外边**
+
+```kotlin
+fun main() {
+    update(1) { x, y ->
+        x + y
+    }
+}
+
+fun update(a: Int, add: (x: Int, y: Int) -> Int) {
+    
+}
 ```
-val sum: (Int, Int) -> Int = { x, y -> x + y }
-```
+
+
 
 # 标准库函数
 
