--- a/Kotlin/类与对象.md
+++ b/Kotlin/类与对象.md
@@ -1,4 +1,4 @@
-# 委托
+# 委托类
 
 在委托中，有两个对象参与处理同一个请求，接受请求的对象将请求委托给另外一个对象处理
 
@@ -19,6 +19,63 @@ class KotlinBook(private val javaBook: JavaBook) : Book by javaBook
 fun main() {
     val javaBook = JavaBook()
     KotlinBook(javaBook).page()
+}
+```
+
+# 委托属性
+
+## 自定义委托
+
+* **提供一个类，提供setValue和getValue函数，并且operator修饰**
+
+```kotlin
+fun main() {
+    var name by Delegate()
+
+    name="123"
+    
+    println(name)
+}
+
+class Delegate {
+    var value by Delegates.notNull<String>()
+
+    operator fun getValue(thisRef: Any?, property: KProperty<*>): String {
+        return value
+    }
+
+    operator fun setValue(thisRef: Any?, property: KProperty<*>, value: String) {
+        this.value = value
+    }
+}
+```
+
+## 标准委托
+
+### notNull
+
+* **notNull是Kotlin提供的函数，将属性委托且不能为Null**
+
+```kotlin
+fun main() {
+    var age by Delegates.notNull<Int>()
+
+    age = 10
+
+    println(age)
+}
+```
+
+### lazy延迟加载
+
+* **LazyThreadSafetyMode.NONE：单个线程访问**
+* **LazyThreadSafetyMode.PUBLICATION：多个线程访问**
+
+```kotlin
+val name by lazy(LazyThreadSafetyMode.NONE) { 20 }
+
+fun main() {
+    println(name)
 }
 ```
 
