--- a/Kotlin/类与对象.md
+++ b/Kotlin/类与对象.md
@@ -1,4 +1,7 @@
-# 委托类
+# 委托
+
+
+## 委托类
 
 在委托中，有两个对象参与处理同一个请求，接受请求的对象将请求委托给另外一个对象处理
 
@@ -22,9 +25,9 @@ fun main() {
 }
 ```
 
-# 委托属性
+## 委托属性
 
-## 自定义委托
+### 自定义委托
 
 * **提供一个类，提供setValue和getValue函数，并且operator修饰**
 
@@ -50,9 +53,9 @@ class Delegate {
 }
 ```
 
-## 标准委托
+### 系统委托
 
-### notNull
+#### notNull
 
 * **notNull是Kotlin提供的函数，将属性委托且不能为Null**
 
@@ -66,7 +69,7 @@ fun main() {
 }
 ```
 
-### lazy延迟加载
+#### lazy
 
 * **LazyThreadSafetyMode.NONE：单个线程访问**
 * **LazyThreadSafetyMode.PUBLICATION：多个线程访问**
@@ -76,6 +79,45 @@ val name by lazy(LazyThreadSafetyMode.NONE) { 20 }
 
 fun main() {
     println(name)
+}
+```
+
+#### observable
+
+```kotlin
+class User {
+    //old：旧值	new：新值
+    var name: String by Delegates.observable("init") { prop, old, new ->
+        println("$old -> $new")
+    }
+}
+
+fun main() {
+    val user = User()
+    user.name = "first"
+    user.name = "second"
+}
+
+//输出
+init -> first
+first -> second
+```
+
+## 属性存储映射
+
+```kotlin
+class User(map: Map<String, Any?>) {
+    val name: String by map
+    val age: Int     by map
+}
+
+fun main() {
+    val user = User(mapOf(
+            "name" to "John Doe",
+            "age" to 25
+    ))
+    println(user.name) // Prints "John Doe"
+    println(user.age)  // Prints 25
 }
 ```
 
