--- a/Kotlin/类与对象.md
+++ b/Kotlin/类与对象.md
@@ -1,3 +1,28 @@
+# 1.扩展
+
+## 1.1扩展函数
+
+不修改类的前提下，扩展类的函数功能
+
+```kotlin
+class Book {
+
+}
+
+fun Book.run() {
+    println("扩展函数")
+}
+
+class Test {
+    @Test
+    fun say() {
+        Book().run()
+    }
+}
+```
+
+## 1.2扩展属性
+
 # 委托
 
 
