--- a/Kotlin/集合.md
+++ b/Kotlin/集合.md
@@ -1,4 +1,4 @@
-# 概述
+# 1.概述
 
 * **Kotlin包含List，Set，Map3种集合**
   * **都是接口，并不是实际操作类**
@@ -6,7 +6,9 @@
   * **它们分别还有MutableList<E>、MutableSet<E>、MutableMap<K,V>接口，可进行集合操作**
 * **在定义集合类型变量的时候如果使用`List<E>`、`Set<E>`、`Map<K,V>`声明的时候该集合则是不可变集合，而使用`MutableList<E>`、`MutableSet<E>`、`MutableMap<K,V>`的时候该集合才是可变类型集合**
 
-# Collection接口
+# 2.元素不可变
+
+## Collection接口
 
 * **因为Collection是接口，具体的实现需要采用`listOf`，`setOf`函数**
 
@@ -25,11 +27,10 @@ fun main() {
 }
 ```
 
-## List
+### List
 
 * **按照指定顺序存储数据**
 
-* **只包含读的操作**
 
 ```kotlin
 fun main() {
@@ -37,7 +38,7 @@ fun main() {
 }
 ```
 
-## Set
+### Set
 
 ```kotlin
 fun main() {
@@ -45,7 +46,9 @@ fun main() {
 }
 ```
 
-## Map
+## Map接口
+
+> 声明
 
 ```kotlin
 fun main() {
@@ -53,9 +56,23 @@ fun main() {
 }
 ```
 
+> 构造初始值
 
+```kotlin
+class Test {
+    @Test
+    fun say() {
+        //方式1
+        val map1 = mapOf<Int, Int>(1 to 1, 2 to 2)
+        //方式2
+        val map2 = mapOf<Int, Int>(Pair(1,1))
+    }
 
-# MutableCollection
+```
+
+# 3.元素可变
+
+## MutableCollection接口
 
 * **是`Collection`接口写操作的对应类**
 * **分别对应`list`,`set`,`map`**
@@ -68,7 +85,7 @@ fun main() {
 }
 ```
 
-## MutableList
+### MutableList
 
 * **包含读取操作**
 
@@ -83,7 +100,7 @@ fun main() {
 }
 ```
 
-## MutableSet
+### MutableSet
 
 ```kotlin
 fun main() {
@@ -91,11 +108,26 @@ fun main() {
 }
 ```
 
-## MutableMap
+## Map接口
+
+### MutableMap
 
 ```kotlin
 fun main() {
     val mutableMapOf = mutableMapOf<Any, Any>()
+}
+```
+
+# 4.空集合
+
+```kotlin
+class Test {
+    @Test
+    fun say() {
+        val list = emptyList<Int>()
+        val set = emptySet<Int>()
+        val map = emptyMap<Int, Int>()
+    }
 }
 ```
 
