--- a/Android/8.其它/音视频/1.PCM数据.md
+++ b/Android/8.其它/音视频/1.PCM数据.md
@@ -1,4 +1,4 @@
-### 基础知识
+# 基础知识
 
 > 简介
 
@@ -21,3 +21,49 @@ PCM是把声音从模拟信号转化为数字信号的技术
 > 声道数
 
 声道数分为单声道，双声道，声音在录制或播放时在不同空间位置采集或回放的相互独立的音频信号
+
+# 端序
+
+> 大端模式
+
+是指**数据的高字节保存在内存的低地址中，而数据的低字节保存在内存的高地址中**，这样的存储模式有点儿类似于把数据当作字符串顺序处理：地址由小向大增加，而数据从高位往低位放
+
+> 小端模式
+
+是指**数据的高字节保存在内存的高地址中，而数据的低字节保存在内存的低地址中**，这种存储模式将地址的高低和数据位权有效地结合起来，高地址部分权值高，低地址部分权值低，和我们的逻辑方法一致
+
+- **存储量大于1字节，非char类型，如int，float等，要考虑字节的顺序问题了**
+
+> 测试
+
+```java
+public class Test {
+    public static void main(String[] args) {
+        // 创建12个字节的字节缓冲区
+        ByteBuffer bb = ByteBuffer.wrap(new byte[4]);
+        // 存入字符串
+        bb.asCharBuffer().put("Aa");
+        System.out.println(Arrays.toString(bb.array()));
+
+        // 反转缓冲区
+        bb.rewind();
+        // 设置字节存储次序
+        bb.order(ByteOrder.BIG_ENDIAN);
+        bb.asCharBuffer().put("Aa");
+        System.out.println(Arrays.toString(bb.array()));
+
+        // 反转缓冲区
+        bb.rewind();
+        // 设置字节存储次序
+        bb.order(ByteOrder.LITTLE_ENDIAN);
+        bb.asCharBuffer().put("Aa");
+        System.out.println(Arrays.toString(bb.array()));
+    }
+}
+
+//输出
+[0, 65, 0, 97]
+[0, 65, 0, 97]
+[65, 0, 97, 0]
+```
+
