--- a/Kotlin/8.集合.md
+++ b/Kotlin/8.集合.md
@@ -131,3 +131,89 @@ class Test {
 }
 ```
 
+# 5.遍历
+
+## iterator迭代器
+
+```kotlin
+fun main() {
+    val numbers = listOf("one", "two", "three", "four")
+    val numbersIterator = numbers.iterator()
+    while (numbersIterator.hasNext()) {
+        println(numbersIterator.next())
+    }
+}
+```
+
+## for循环
+
+```kotlin
+fun main() {
+    val numbers = listOf("one", "two", "three", "four")
+    for (item in numbers) {
+        println(item)
+    }
+}
+```
+
+## forEach
+
+```kotlin
+fun main() {
+    val numbers = listOf("one", "two", "three", "four")
+    numbers.forEach {
+        println(it)
+    }
+}
+```
+
+>  支持向前向后迭代
+
+```kotlin
+fun main() {
+    val numbers = listOf("one", "two", "three", "four")
+    val listIterator = numbers.listIterator()
+    while (listIterator.hasNext()) {
+        listIterator.next()
+    }
+    println("Iterating backwards:")
+    while (listIterator.hasPrevious()) {
+        print("Index: ${listIterator.previousIndex()}")
+        println(", value: ${listIterator.previous()}")
+    }
+}
+```
+
+## MutableIterator
+
+可变迭代器，可将元素从集合中删除
+
+```kotlin
+fun main() {
+    val numbers = mutableListOf("one", "two", "three", "four")
+    val mutableIterator = numbers.iterator()
+
+    mutableIterator.next()
+    mutableIterator.remove()
+    println("After removal: $numbers")
+}
+```
+
+可变迭代器，可向集合中添加元素，也可以**替换**元素的值
+
+```kotlin
+fun main() {
+    val numbers = mutableListOf("one", "four", "four")
+    val mutableListIterator = numbers.listIterator()
+
+    //插入元素
+    mutableListIterator.next()
+    mutableListIterator.add("two")
+
+    //替换元素
+    mutableListIterator.next()
+    mutableListIterator.set("three")
+    println(numbers)
+}
+```
+
