--- a/Kotlin/8.集合.md
+++ b/Kotlin/8.集合.md
@@ -217,3 +217,54 @@ fun main() {
 }
 ```
 
+# 6.区间与数列
+
+> `..`顺序迭代
+
+```kotlin
+fun main() {
+    for (i in 1..4) {
+        println(i)
+    }
+}
+```
+
+> `downTo`反向迭代
+
+```kotlin
+fun main() {
+    for (i in 4 downTo 1) {
+        println(i)
+    }
+}
+```
+
+> `step`跳过
+
+```kotlin
+fun main() {
+    for (i in 1..8 step 2)
+        print(i)
+    println()
+    for (i in 8 downTo 1 step 2)
+        print(i)
+}
+
+//输出
+1357
+8642
+```
+
+> `until`迭代不包含最后一个索引
+
+```kotlin
+fun main() {
+    for (i in 1 until 10) {
+        print(i)
+    }
+}
+
+//输出
+123456789
+```
+
