--- a/Kotlin/8.集合.md
+++ b/Kotlin/8.集合.md
@@ -268,3 +268,172 @@ fun main() {
 123456789
 ```
 
+# 7.过滤
+
+## 筛选
+
+### filter
+
+**满足条件的元素，生成新的集合**
+
+```kotlin
+fun main() {
+    val numbers = listOf("one", "two", "three", "four")
+    val longerThan3 = numbers.filter {
+        it.length > 3
+    }
+    println(longerThan3)
+
+    val numbersMap = mapOf("key1" to 1, "key2" to 2, "key3" to 3, "key11" to 11)
+    val filteredMap = numbersMap.filter { (key, value) ->
+        key.endsWith("1") && value > 10
+    }
+    println(filteredMap)
+}
+
+//输出
+[three, four]
+{key11=11}
+```
+
+### filterIndexed
+
+**函数参数提供索引以及索引对应的值**
+
+```kotlin
+fun main() {
+    val numbers = listOf("one", "two", "three", "four")
+
+    //函数参数-索引和值
+    val filteredIdx = numbers.filterIndexed { index, s ->
+        (index != 0) && (s.length < 5)
+    }
+
+    println(filteredIdx)
+}
+
+//输出
+[two, four]
+```
+
+### filterNot
+
+**反条件过滤，按函数执行条件过滤一遍，在通过函数反过滤一遍**
+
+```kotlin
+fun main() {
+    val numbers = listOf("one", "two", "three", "four")
+    
+    //反条件
+    val filteredNot = numbers.filterNot {
+        it.length <= 3
+    }
+
+    println(filteredNot)
+}
+
+//输出
+[three, four]
+```
+
+### filterIsInstance
+
+**按对象进行筛选**
+
+```kotlin
+fun main() {
+    val numbers = listOf(null, 1, "two", 3.0, "four")
+    numbers.filterIsInstance<String>().forEach {
+        println(it)
+    }
+}
+
+//输出
+two
+four
+```
+
+### filterNotNull
+
+**筛选非null类型的元素**
+
+```kotlin
+fun main() {
+    val numbers = listOf(null, "one", "two", null)
+    numbers.filterNotNull().forEach {
+        println(it)
+    }
+}
+
+//输出
+one
+two
+```
+
+## 划分
+
+### partition
+
+**满足条件保存到一个集合，不满足条件保存到另外一个集合**
+
+```kotlin
+fun main() {
+    val numbers = listOf("one", "two", "three", "four")
+    val partition = numbers.partition {
+        it.length > 3
+    }
+
+    println(partition.first)
+    println(partition.second)
+}
+
+//输出
+[three, four]
+[one, two]
+```
+
+## 检验
+
+### any
+
+**任何一个元素满足条件，输出true，否则false**
+
+```kotlin
+fun main() {
+    val numbers = listOf("one", "two", "three", "four")
+
+    println(numbers.any { it.endsWith("e") })
+}
+
+//输出
+true
+```
+
+### none
+
+**元素没有一个满足条件的，输出true，否则false**
+
+```kotlin
+fun main() {
+    val numbers = listOf("one", "two", "three", "four")
+
+    println(numbers.none { it.endsWith("a") })
+}
+
+//输出
+true
+```
+
+### all
+
+**元素每一个都满足条件，输出true，否则false**
+
+```kotlin
+fun main() {
+    val numbers = listOf("one", "two", "three", "four")
+    println(numbers.all { it.endsWith("e") })
+}
+
+//输出
+```
+
