--- a/Java/2.MySQL/1.MySQL命令.md
+++ b/Java/2.MySQL/1.MySQL命令.md
@@ -3,7 +3,7 @@
 ## 登录数据库
 
 ```
-mysql -u root 
+mysql -uroot -p 
 ```
 
 ## 选择数据库
@@ -17,13 +17,13 @@ use 数据库名;
 ## 导出
 
 ```
-mysqldump -u 数据库登录名 -p 目标数据库名>SQL文件名
-例子：mysqldump -u root -p abc >abc.sql
+//mysqldump -u 数据库登录名 -p 目标数据库名>SQL文件名
+mysqldump -u root -p abc >abc.sql
 ```
 
 ## 导入
 
 ```
-mysql -u 数据库登录名 -p 数据库名 < 数据库文件
-列子：mysql -u abc -p abc < abc.sql
+//mysql -u 数据库登录名 -p 数据库名 < 数据库文件
+mysql -u abc -p abc < abc.sql
 ```
