--- a/Android/6.NDK/2.JNI.md
+++ b/Android/6.NDK/2.JNI.md
@@ -1,2 +1,51 @@
-# JNIEnv
+# JNIEnv在C/C++区别
 
+> 区别
+
+| C        | C++      |
+| -------- | -------- |
+| 二级指针 | 一级指针 |
+
+* 在C语言编译环境下，JNIEnv定义为指向JNINativeInterface结构体的指针
+* 而在C++编译环境下，JNIEnv定义为_JNIEnv 结构体, _JNIEnv 是对JNINativeInterface结构体的封装, 最终会调用JNINativeInterface中的函数
+
+> C环境JNIEnv使用
+
+```c
+//解引用得到JNINativeInterface类型的指针，然后调用JNINativeInterface中对应的函数
+(*env)->NewStringUTF(env, "From native to java"); 
+```
+
+> C++环境JNIEnv使用
+
+```c++
+//env为_JNIEnv类的指针，调用_JNIEnv类对应的成员函数
+env->NewStringUTF("From native to java");
+```
+
+# jobject&jclass
+
+# 数据类型
+
+>基本数据类型
+
+| JNI数据类型 | Java数据类型 |
+| ----------- | ------------ |
+| jboolean    | Boolean      |
+| jbyte       | byte         |
+| jchar       | char         |
+| jshort      | short        |
+| jint        | int          |
+| jlong       | long         |
+| jfloat      | float        |
+| jdouble     | double       |
+
+>引用数据类型
+
+| JNI数据类型  | Java数据类型   |
+| ------------ | -------------- |
+| jclass       | .class文件对象 |
+| jobject      | class对象      |
+| jstring      | String         |
+| jByteArray   | byte[]         |
+| jObjectArray | object[]       |
