--- a/Java/2.MySQL/7.多表查询.md
+++ b/Java/2.MySQL/7.多表查询.md
@@ -20,7 +20,9 @@ alter table 多表名称 add foreign key (外键名称) references 一表名称(
 * 主表中不能删除从表中已引用的数据
 * 从表中不能添加主表中不存在的数据
 
----
+> 案例
+
+
 
 ## 多对多
 
@@ -32,4 +34,54 @@ alter table 多表名称 add foreign key (外键名称) references 一表名称(
 ```
 alter table op add foreign key(oid) references orders(id);
 alter table op add  foreign key (pid) references products(id);
+```
+
+# 多表查询
+
+## 内连接
+
+* **获取2个表中交集部分**
+
+> 显示内连接
+
+```sql
+select * from a [inner] join b on 连接条件
+```
+
+> 隐式内连接
+
+* **使用`where`消除无用数据**
+
+```sql
+select * from a,b where 连接条件
+```
+
+## 外连接
+
+> 左外连接
+
+* **查询左表所有数据，且左右表交集数据**
+
+```sql
+select * from a left [outer] join b on 连接条件
+```
+
+> 右外连接
+
+* **查询右表表所有数据，且左右表交集数据**
+
+```sql
+select a.*,b.* from b right [outer] join a on 连接条件
+```
+
+---
+
+## 子查询
+
+* **查询中嵌套查询，称嵌套查询为子查询**
+
+```sql
+select *
+from emp
+where salary = (select MAX(salary) from emp)
 ```
