--- a/Java/2.MySQL/7.多表查询.md
+++ b/Java/2.MySQL/7.多表查询.md
@@ -4,7 +4,7 @@
 
 >概述
 
-在开发中，我们将一对多的关系，一方称之为主表，多方称之为多表，为了表示一对多的关系，一般会在多表方添加一个字段，字段类型一般和主表的主键的类型保持一致，我们称这个字段为外键
+在开发中，我们将一对多的关系，一方称之为主(一)表，多方称之为从(多)表，为了表示一对多的关系，一般会在多表方添加一个字段，字段类型一般和主表的主键的类型保持一致，我们称这个字段为外键
 
 >添加外键约束
 
