--- a/Kotlin/1.函数.md
+++ b/Kotlin/1.函数.md
@@ -1,26 +1,62 @@
 # Lambda表达式
 
-未声明的函数，可作为参数传递
+## 语法格式
 
-## 声明
+> 无参数Lambda
 
 ```kotlin
-//格式
-变量标识符	表达式名字 = { 参数1，...，参数2	->
-	//隐式：括号最后一个表达式视为返回值
-    //显式：采用return明确返回
+val/var 变量名 = { 操作的代码 }
+
+//案例
+fun main() {
+    val a = { println("无参数Lambda") }
+
+    a()
 }
 
-val add = { x: Int, y: Int ->
-    
+//输出
+无参数Lambda
+```
+
+> 有参数Lambda
+
+```kotlin
+val/var 变量名 : (参数的类型，参数类型，...) -> 返回值类型 = {参数1，参数2，... -> 操作参数的代码 }
+等价于
+val/var 变量名 = { 参数1 ： 类型，参数2 : 类型, ... -> 操作参数的代码 }
+
+//案例
+fun main() {
+    val a: (Int, Int) -> Int = { a, b ->
+        a + b
+    }
+
+    val c = { d: Int, e: Int ->
+        d + e
+    }
+
+    a(1, 2)
+    c(3, 4)
 }
 ```
 
-## 作为参数
-
-* **Lambda表达式作为一个函数的最后参数，可将表达式提到（）外边**
+> Lambda作为参数
 
 ```kotlin
+fun test(a : Int, 参数名 : (参数1 ： 类型，参数2 : 类型, ... ) -> 表达式返回类型){
+    ...
+}
+
+//案例
+fun main() {
+    test(1, { a: Int, b: Int -> a + b })
+}
+
+fun test(a: Int, b: (c: Int, d: Int) -> Int) {
+    a + b(2, 3)
+}
+
+//Lambda表达式作为一个函数的最后参数，可将表达式提到（）外边
 fun main() {
     update(1) { x, y ->
         x + y
