--- a/Kotlin/2.协程.md
+++ b/Kotlin/2.协程.md
@@ -1,140 +1,177 @@
-# 
+# 启动协程
 
-# 1.基础
+## launch
 
-## 1.1入门程序
+* `launch`启动协程
 
-* **delay：是协程挂起函数，不会造成线程阻塞，但会挂起协程，只能在协程中使用**
-```
-fun main(args: Array<String>) {
-    GlobalScope.launch {
-        //开启协程,delay是挂起函数
-        delay(1000)
-        print(Thread.currentThread().name)
-    }
-    //主线程
-    println(Thread.currentThread().name)
-    Thread.sleep(2000)
-}
-```
+```kotlin
+class Test {
+    @Test
+    fun test() {
+        //启动协程
+        GlobalScope.launch {
 
-## 1.2桥接阻塞与非阻塞的世界
-
-* **runBlocking：调用此函数，会阻塞线程，直到内部协程执行完毕**
-```
-fun main(args: Array<String>) {
-    GlobalScope.launch {
-        //开启协程,delay是挂起函数
-        delay(1000)
-        print(Thread.currentThread().name)
-    }
-    println(Thread.currentThread().name)
-    //阻塞线程，延时2S，保持JVM存活
-    runBlocking { 
-        delay(2000)
+        }
     }
 }
 ```
 
-* **`runBlocking<Unit> { …… }`用于包装函数，泛型为函数返回值类型**
-* **一般runBlocking函数不用来当做普通协程函数使用，它的主要目的是用来桥接普通阻塞代码和挂起风格的非阻塞代码**
-```
-fun main(args: Array<String>) = runBlocking<Unit>{
-    //开启主协程
-    GlobalScope.launch {
-        //开启子协程
-        delay(1000)
-        print(Thread.currentThread().name)
-    }
-    println(Thread.currentThread().name)
-    delay(2000)
-}
-```
+### launch调度器
 
-## 等待一个作业
+* Dispatchers.Default：不指定，即为默认
+* Dispatchers.IO：IO线程
+* Dispatchers.Main：主线程
+* Dispatchers.Unconfined：不指定，即为当前线程
 
-* **显示`joni`**
-* **延迟一段时间来等待另一个协程运行并不是一个好的选择。让我们显式（以非阻塞方式）等待所启动的后台 Job 执行结束,现在，结果仍然相同，但是主协程与后台作业的持续时间没有任何关系了。好多了**
-
-```
+```kotlin
 class Demo {
     @Test
-    fun demo()= runBlocking {
-        val job = GlobalScope.launch {
-            println("子线程")
+    fun test() {
+        GlobalScope.launch(Dispatchers.IO) {
         }
-        println("主线程")
-        job.join()
+
+        Thread.sleep(1000)
+    }
+}
+
+//如果不使用上面调度器，可以自定义使用下面的调度器进行开启协程
+class Demo {
+    @Test
+    fun test() {
+        //单线程
+        val newSingleThreadContext = newSingleThreadContext("")
+        //线程池
+        val newFixedThreadPoolContext = newFixedThreadPoolContext(5, "")
+        GlobalScope.launch(newSingleThreadContext) {
+
+        }
+        Thread.sleep(1000)
     }
 }
 ```
 
-## 结构化的并发
 
-* **隐式`join`**
 
-```
+## async启动
+
+* `async`启动带返回值的协程
+
+```kotlin
 class Demo {
     @Test
-    fun demo()= runBlocking {
-        launch {
-            println("子线程")
-        }
-        println("主线程")
-    }
-}
-```
-
-## 作用域构建器
-
-* **除了由不同的构建器提供协程作用域之外，还可以使用` coroutineScope`构建器声明自己的作用域。它会创建新的协程作用域并且在所有已启动子协程执行完毕之前不会结束。`runBlocking` 与 `coroutineScope` 的主要区别在于后者在等待所有子协程执行完毕时不会阻塞当前线程**
-
-```
-class Demo {
-    @Test
-    fun demo() = runBlocking {
-        launch {
-            println("Task from runBlocking")
-        }
-
-        coroutineScope {
-            // 创建一个新的协程作用域
-            launch {
-                println("Task from nested launch")
+    fun test() {
+        GlobalScope.launch {
+            val async1 = this.async {
+                1
             }
 
-            println("Task from coroutine scope") // 这一行会在内嵌 launch 之前输出
+            val async2 = this.async {
+                2
+            }
+
+            println(async1.await() + async2.await())
         }
 
-        println("Coroutine scope is over") // 这一行在内嵌 launch 执行完毕后才输出
+        Thread.sleep(1000)
     }
 }
 
-输出结果：
-Task from coroutine scope
-Task from runBlocking
-Task from nested launch
-Coroutine scope is over
+//输出
+3
 ```
 
-## 提取函数重构
+## runBlocking
 
-* **`suspend`修饰的函数，称为挂起函数，可在协程中进行调用**
+* 会阻塞线程，直到`runBlocking`内部协程执行完毕
 
+```kotlin
+class Demo {
+    fun run() = runBlocking {
+        repeat(10) {
+            println("循环第${it}次")
+        }
+    }
+
+    @Test
+    fun test() {
+        println("开始")
+        run()
+        println("结束")
+    }
+}
+
+//输出
+开始
+循环第0次
+循环第1次
+循环第2次
+循环第3次
+循环第4次
+循环第5次
+循环第6次
+循环第7次
+循环第8次
+循环第9次
+结束
 ```
+
+`runBlocking<Unit> { …… }`用于包装函数，泛型为函数返回值类型
+
+```kotlin
+class Demo {
+    fun run() = runBlocking<String> {
+        println("协程")
+        return@runBlocking "执行完毕"
+    }
+
+    @Test
+    fun test() {
+        println("开始")
+        val msg = run()
+        println(msg)
+        println("结束")
+    }
+}
+
+//输出
+开始
+协程
+执行完毕
+结束
+```
+
+# suspend
+
+* **`suspend`修饰的函数，称为挂起函数，在协程中进行调用或挂起函数中调用**
+* **协程中有多个挂起函数，它们的执行是顺序的，需要等待前一个挂起函数恢复，才能执行后面的挂起函数**
+
+```kotlin
 class Demo {
     @Test
-    fun demo() = runBlocking {
-        launch {
-            get()
+    fun test() {
+        GlobalScope.launch {
+            say()
+            run()
         }
-        println("主线程")
+
+        Thread.sleep(20)
+
+        println("结束")
     }
 
-    suspend fun get() {
-        println("子线程")
+    suspend fun say() {
+        println("说话")
+    }
+
+    suspend fun run() {
+        println("跑步")
     }
 }
+
+//输出
+说话
+跑步
+结束
 ```
 
 ## 协程很轻量
