--- a/Java/4.Mybatis/1.CURD.md
+++ b/Java/4.Mybatis/1.CURD.md
@@ -1,3 +1,7 @@
+# VO
+
+
+
 ![](5c972c2aa2fe956bad000000.png)
 
 # 查询
@@ -274,7 +278,7 @@ class TestController {
 
 ---
 
-#<center>插入
+# 插入
 
 ##<center>保存用户信息
 
@@ -335,7 +339,7 @@ public class TestController {
 * **keyProperty：将得到的主键值传入属性中，来自Bean的属性**
 * **order：在insert前或后执行，BEFORE在前执行，AFTER在后执行**
 * **resultType：返回主键的数据类型，需要和Bean中的ID类型一致**
-```
+```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE mapper
         PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN"
@@ -418,9 +422,11 @@ class TestController {
 }
 ```
 
----
+## 插入集合数据
 
-#<center>删除
+
+
+# 删除
 
 ##<center>根据ID删除用户信息
 
