--- a/C/3.指针.md
+++ b/C/3.指针.md
@@ -68,3 +68,114 @@ int main() {
 }
 ```
 
+# 指针运算
+
+## 指针加法
+
+我们喜欢在程序中使用指针代替数组，因为变量指针可以递增，而数组不能递增，数组可以看成一个指针常量
+
+```c
+#include <stdio.h>
+ 
+const int MAX = 3;
+ 
+int main ()
+{
+   int  var[] = {10, 100, 200};
+   int  i, *ptr;
+ 
+   /* 指针中的数组地址 */
+   ptr = var;
+   for ( i = 0; i < MAX; i++)
+   {
+ 
+      printf("存储地址：var[%d] = %x\n", i, ptr );
+      printf("存储值：var[%d] = %d\n", i, *ptr );
+ 
+      /* 移动到下一个位置 */
+      ptr++;
+   }
+   return 0;
+}
+```
+
+## 指针减法
+
+```c
+#include <stdio.h>
+ 
+const int MAX = 3;
+ 
+int main ()
+{
+   int  var[] = {10, 100, 200};
+   int  i, *ptr;
+ 
+   /* 指针中最后一个元素的地址 */
+   ptr = &var[MAX-1];
+   for ( i = MAX; i > 0; i--)
+   {
+ 
+      printf("存储地址：var[%d] = %x\n", i-1, ptr );
+      printf("存储值：var[%d] = %d\n", i-1, *ptr );
+ 
+      /* 移动到下一个位置 */
+      ptr--;
+   }
+   return 0;
+}
+```
+
+## 指针比较
+
+```c
+#include <jni.h>
+
+JNIEXPORT jint
+Java_com_aib_ndk_1demo_MainActivity_getData(JNIEnv *env, jobject obj) {
+    int a[] = {1, 2, 3};
+    int *p, *q;
+    int max;
+    p = &a[0];
+    q = &a[2];
+
+    if (p > q) {
+        max = *p;
+    } else {
+        max = *q;
+    }
+
+    return max;
+}
+
+//输出
+3
+```
+
+# 指针数组
+
+```c
+#include <stdio.h>
+ 
+const int MAX = 4;
+ 
+int main ()
+{
+   const char *names[] = {
+                   "Zara Ali",
+                   "Hina Ali",
+                   "Nuha Ali",
+                   "Sara Ali",
+   };
+   int i = 0;
+ 
+   for ( i = 0; i < MAX; i++)
+   {
+      printf("Value of names[%d] = %s\n", i, names[i] );
+   }
+   return 0;
+}
+```
+
+# 指向指针的指针
+
