--- a/Java/SpringBoot/5.Token机制.md
+++ b/Java/SpringBoot/5.Token机制.md
@@ -90,23 +90,43 @@ public class TokenUtil {
 * **拦截器进行验证**
 
 ```java
-@Component
-public class TokenIntercepter implements HandlerInterceptor {
     @Override
     public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
-        String token = request.getHeader("Token");
-        if (token != null) {
-            System.out.println("得到Token");
-            boolean verifyToken = TokenUtil.verifyToken(token);
-            if (verifyToken) {
+        String method = request.getMethod();
+        if (method.equals("POST")) {
+            String token = request.getParameter("token");
+//            response.setCharacterEncoding("utf-8");
+            response.setContentType("application/json;charset=utf-8");
+            ServletOutputStream writer = response.getOutputStream();
+            if (token == null) {
+                //Token为空
+                BaseEntity<String> entity = new BaseEntity<>();
+                entity.setCode(404);
+                entity.setMsg("Token Null");
+                ObjectMapper mapper = new ObjectMapper();
+                String json = mapper.writeValueAsString(entity);
+                writer.println(json);
+                writer.close();
+                return true;
+            } else {
+                try {
+                    TokenUtil.verifyToken(token);
+                } catch (TokenExpiredException tokenException) {
+                    //Token过期
+                    BaseEntity<String> entity = new BaseEntity<>();
+                    entity.setCode(404);
+                    entity.setMsg("Token Expired");
+                    ObjectMapper mapper = new ObjectMapper();
+                    String json = mapper.writeValueAsString(entity);
+                    writer.println(json);
+                    writer.close();
+                    return true;
+                }
                 return true;
             }
         }
-        response.setCharacterEncoding("utf-8");
-        response.getWriter().write("Token Error");
         return false;
     }
-}
 ```
 
 * **添加拦截器配置**
