--- a/Android/6.NDK/1.Cmake.md
+++ b/Android/6.NDK/1.Cmake.md
@@ -36,3 +36,124 @@ target_link_libraries( # Specifies the target library.
                        # included in the NDK.
                        ${log-lib} )
 ```
+
+# 引入第三方库
+
+## 自行编译库
+
+为了测试，需要自己动手进行编译一个加法运算的库
+
+> 编写头文件
+
+定义一个函数，函数拥有2个形参
+
+```c
+int add(int a, int b);
+```
+
+> 实现头文件的函数
+
+新创建一个C源文件，实现头文件的函数，函数返回2个参数的和
+
+```c
+#include <stdio.h>
+
+int add(int a, int b) {
+    return a + b;
+}
+```
+
+最后`Rebuild Project`生成`so`文件
+
+## 导入动态库
+
+将前面生成的`so`导入到`jniLibs`，并在`cpp`文件夹下新增`inc`文件夹，然后添加头文件
+
+> CmakeLists编写
+
+```cmake
+# For more information about using CMake with Android Studio, read the
+# documentation: https://d.android.com/studio/projects/add-native-code.html
+
+# Sets the minimum version of CMake required to build the native library.
+
+cmake_minimum_required(VERSION 3.4.1)
+
+# Creates and names a library, sets it as either STATIC
+# or SHARED, and provides the relative paths to its source code.
+# You can define multiple libraries, and CMake builds them for you.
+# Gradle automatically packages shared libraries with your APK.
+
+add_library( # Sets the name of the library.
+        native-lib
+
+        # Sets the library as a shared library.
+        SHARED
+
+        # Provides a relative path to your source file(s).
+        native-lib.cpp)
+
+# Searches for a specified prebuilt library and stores the path as a
+# variable. Because CMake includes system libraries in the search path by
+# default, you only need to specify the name of the public NDK library
+# you want to add. CMake verifies that the library exists before
+# completing its build.
+
+find_library( # Sets the name of the path variable.
+        log-lib
+
+        # Specifies the name of the NDK library that
+        # you want CMake to locate.
+        log)
+
+# Specifies libraries CMake should link to your target library. You
+# can link multiple libraries, such as libraries you define in this
+# build script, prebuilt third-party libraries, or system libraries.
+
+target_link_libraries( # Specifies the target library.
+        native-lib
+		
+		#关联第三方so库
+        add
+
+        # Links the target library to the log library
+        # included in the NDK.
+        ${log-lib})
+
+############以下是添加第三方SO的步骤#################
+#引入头文件
+include_directories(inc)
+
+#添加SO文件
+add_library(add SHARED IMPORTED)
+
+#设置SO文件属性
+set_target_properties(
+        add
+
+        PROPERTIES IMPORTED_LOCATION
+
+        #很容易出错，一定要保证地址跟so库真实地址一致
+        ${PROJECT_SOURCE_DIR}/../../../src/main/jniLibs/${ANDROID_ABI}/libadd.so)
+```
+
+> 调用库的函数
+
+```c++
+#include <jni.h>
+#include <string>
+
+//注意C++文件引入C头文件，需要在前面添加`extern "C"`，否则run不起来
+extern "C"
+#include <Test.h>
+
+extern "C" JNIEXPORT jint JNICALL
+Java_com_aib_opencv_1demo_MainActivity_stringFromJNI(JNIEnv *env, jobject /* this */) {
+    int sum = add(1, 99);
+    return sum;
+}
+
+//输出
+100
+```
+
