--- a/C/3.指针.md
+++ b/C/3.指针.md
@@ -179,3 +179,57 @@ int main ()
 
 # 指向指针的指针
 
+一个指针包含一个变量的地址。当我们定义一个指向指针的指针时，第一个指针包含了第二个指针的地址，第二个指针指向包含实际值的地址
+
+![](pointer_to_pointer.jpg)
+
+> 二级指针格式
+
+```c
+//声明了一个指向 int 类型指针的指针
+int **var;
+```
+
+> 案例
+
+当一个目标值被一个指针间接指向到另一个指针时，访问这个值需要使用两个星号运算符
+
+```c
+#include <stdio.h>
+ 
+int main ()
+{
+   int  var;
+   int  *ptr;
+   int  **pptr;
+
+   var = 3000;
+
+   /* 获取 var 的地址 */
+   ptr = &var;
+
+   /* 使用运算符 & 获取 ptr 的地址 */
+   pptr = &ptr;
+
+   /* 使用 pptr 获取值 */
+   printf("Value of var = %d\n", var );
+   printf("Value available at *ptr = %d\n", *ptr );
+   printf("Value available at **pptr = %d\n", **pptr);
+
+   return 0;
+}
+
+//输出
+Value of var = 3000
+Value available at *ptr = 3000
+Value available at **pptr = 3000
+```
+
+# 传递指针给函数
+
+C 语言允许您传递指针给函数，只需要简单地声明函数参数为指针类型即可，能接受指针作为参数的函数，也能接受数组作为参数
+
+```c
+void getSeconds(unsigned long *par);
+```
+
