--- a/C++/1.类&对象.md
+++ b/C++/1.类&对象.md
@@ -258,5 +258,274 @@ int main( )
 }
 ```
 
-# 继承中的特点
+## 继承中的特点
+
+* `public`继承：基类 public 成员，protected 成员，private 成员的访问属性在派生类中分别变成：public, protected, private
+* `protected`继承：基类 public 成员，protected 成员，private 成员的访问属性在派生类中分别变成：protected, protected, private
+* `private`继承：基类 public 成员，protected 成员，private 成员的访问属性在派生类中分别变成：private, private, private
+
+> 总结
+
+**private 成员只能被本类成员（类内）和友元访问，不能被派生类访问**
+
+**protected 成员可以被派生类访问**
+
+# 构造函数&析构函数
+
+## 构造函数
+
+构造函数的名称与类的名称是完全相同的，并且不会返回任何类型，也不会返回 void。构造函数可用于为某些成员变量设置初始值
+
+```c++
+#include <iostream>
+
+using namespace std;
+
+class Person {
+private:
+    int age;
+
+public:
+    //构造函数：用于初始化某些变量，它会在每次创建类的新对象时执行
+    Person();
+
+    int getAge() {
+        return age;
+    }
+};
+
+
+Person::Person() {
+    age = 20;
+}
+
+int main() {
+    Person p;
+
+    cout << p.getAge() << endl;
+    return 0;
+}
+```
+
+## 析构函数
+
+类的**析构函数**是类的一种特殊的成员函数，它会在每次删除所创建的对象时执行。析构函数的名称与类的名称是完全相同的，只是在前面加了个波浪号（~）作为前缀，它不会返回任何值，也不能带有任何参数。析构函数有助于在跳出程序（比如关闭文件、释放内存等）前释放资源
+
+```c++
+#include <iostream>
+
+using namespace std;
+
+class Person {
+public:
+    Person();
+
+    ~Person();
+};
+
+Person::Person() {
+    cout << "构造函数" << endl;
+}
+
+Person::~Person() {
+    cout << "析构函数" << endl;
+}
+
+int main() {
+    Person p;
+    return 0;
+}
+
+//输出
+构造函数
+析构函数
+```
+
+# 拷贝构造函数
+
+**拷贝构造函数**是一种特殊的构造函数，它在创建对象时，是使用同一类中之前创建的对象来初始化新创建的对象
+
+> 格式
+
+```c++
+classname (const classname &obj) {
+   // 构造函数的主体
+}
+```
+
+# 友元函数
+
+类的友元函数是定义在类外部，但有权访问类的所有私有（private）成员和保护（protected）成员。尽管友元函数的原型有在类的定义中出现过，但是友元函数并不是成员函数。友元可以是一个函数，该函数被称为友元函数；友元也可以是一个类，该类被称为友元类，在这种情况下，整个类及其所有成员都是友元。如果要声明函数为一个类的友元，需要在类定义中该函数原型前使用关键字 **friend**
+
+> 例子
+
+```c++
+class Box
+{
+   double width;
+public:
+   double length;
+   friend void printWidth( Box box );
+   void setWidth( double wid );
+};
+```
+
+声明类 ClassTwo 的所有成员函数作为类 ClassOne 的友元，需要在类 ClassOne 的定义中放置
+
+```c++
+friend class ClassTwo;
+```
+
+> 例子
+
+```c++
+#include <iostream>
+ 
+using namespace std;
+ 
+class Box
+{
+   double width;
+public:
+   friend void printWidth( Box box );
+   void setWidth( double wid );
+};
+ 
+// 成员函数定义
+void Box::setWidth( double wid )
+{
+    width = wid;
+}
+ 
+// 请注意：printWidth() 不是任何类的成员函数
+void printWidth( Box box )
+{
+   /* 因为 printWidth() 是 Box 的友元，它可以直接访问该类的任何成员 */
+   cout << "Width of box : " << box.width <<endl;
+}
+ 
+// 程序的主函数
+int main( )
+{
+   Box box;
+ 
+   // 使用成员函数设置宽度
+   box.setWidth(10.0);
+   
+   // 使用友元函数输出宽度
+   printWidth( box );
+ 
+   return 0;
+}
+```
+
+# 内联函数
+
+C++ **内联函数**是通常与类一起使用。如果一个函数是内联的，那么在编译时，编译器会把该函数的代码副本放置在每个调用该函数的地方。
+
+对内联函数进行任何修改，都需要重新编译函数的所有客户端，因为编译器需要重新更换一次所有的代码，否则将会继续使用旧的函数。
+
+如果想把一个函数定义为内联函数，则需要在函数名前面放置关键字 **inline**，在调用函数之前需要对函数进行定义。如果已定义的函数多于一行，编译器会忽略 inline 限定符。
+
+在类定义中的定义的函数都是内联函数，即使没有使用 **inline** 说明符
+
+```c++
+#include <iostream>
+ 
+using namespace std;
+
+inline int Max(int x, int y)
+{
+   return (x > y)? x : y;
+}
+
+// 程序的主函数
+int main( )
+{
+
+   cout << "Max (20,10): " << Max(20,10) << endl;
+   cout << "Max (0,200): " << Max(0,200) << endl;
+   cout << "Max (100,1010): " << Max(100,1010) << endl;
+   return 0;
+}
+```
+
+# this指针
+
+在 C++ 中，每一个对象都能通过 **this** 指针来访问自己的地址。**this** 指针是所有成员函数的隐含参数。因此，在成员函数内部，它可以用来指向调用对象。
+
+友元函数没有 **this** 指针，因为友元不是类的成员。只有成员函数才有 **this** 指针
+
+```c++
+#include <iostream>
+
+using namespace std;
+
+class Person {
+private:
+    int age = 20;
+public:
+    int getAge() {
+        return this->age;
+    }
+};
+
+int main() {
+    Person p;
+    cout << p.getAge() << endl;
+    return 0;
+}
+```
+
+# 类的指针
+
+一个指向 C++ 类的指针与指向结构的指针类似，访问指向类的指针的成员，需要使用成员访问运算符 **->**，就像访问指向结构的指针一样。与所有的指针一样，您必须在使用指针之前，对指针进行初始化
+
+```c++
+#include <iostream>
+
+using namespace std;
+
+class Box {
+public:
+    // 构造函数定义
+    Box(double l = 2.0, double b = 2.0, double h = 2.0) {
+        cout << "Constructor called." << endl;
+        length = l;
+        breadth = b;
+        height = h;
+    }
+
+    double Volume() {
+        return length * breadth * height;
+    }
+
+private:
+    double length;     // Length of a box
+    double breadth;    // Breadth of a box
+    double height;     // Height of a box
+};
+
+int main() {
+    Box Box1(3.3, 1.2, 1.5);    // Declare box1
+    Box Box2(8.5, 6.0, 2.0);    // Declare box2
+    Box *ptrBox;                // Declare pointer to a class.
+
+    // 保存第一个对象的地址
+    ptrBox = &Box1;
+
+    // 现在尝试使用成员访问运算符来访问成员
+    cout << "Volume of Box1: " << ptrBox->Volume() << endl;
+
+    // 保存第二个对象的地址
+    ptrBox = &Box2;
+
+    // 现在尝试使用成员访问运算符来访问成员
+    cout << "Volume of Box2: " << ptrBox->Volume() << endl;
+
+    return 0;
+}
+```
+
+# 静态成员
 
