--- a/C/3.指针.md
+++ b/C/3.指针.md
@@ -55,7 +55,7 @@ Address stored in ip variable: bffd8b3c
 Value of *ip variable: 20
 ```
 
-# NULL指针
+## NULL指针
 
 在变量声明的时候，如果没有确切的地址可以赋值，为指针变量赋一个 NULL 值是一个良好的编程习惯。赋为 NULL 值的指针被称为**空**指针。NULL 指针是一个定义在标准库中的值为零的常量
 
@@ -67,4 +67,6 @@ int main() {
     return 0;
 }
 ```
+
+# 指针运算
 
