--- a/Kotlin/8.数组&集合.md
+++ b/Kotlin/8.数组&集合.md
@@ -1,4 +1,8 @@
-# 1.概述
+# 数组
+
+# 集合
+
+## 概述
 
 * **Kotlin包含List，Set，Map3种集合**
   * **都是接口，并不是实际操作类**
@@ -6,9 +10,9 @@
   * **它们分别还有MutableList<E>、MutableSet<E>、MutableMap<K,V>接口，可进行集合操作**
 * **在定义集合类型变量的时候如果使用`List<E>`、`Set<E>`、`Map<K,V>`声明的时候该集合则是不可变集合，而使用`MutableList<E>`、`MutableSet<E>`、`MutableMap<K,V>`的时候该集合才是可变类型集合**
 
-# 2.元素不可变
+## 元素不可变
 
-## Collection接口
+### Collection接口
 
 * **因为Collection是接口，具体的实现需要采用`listOf`，`setOf`函数**
 
@@ -27,7 +31,7 @@ fun main() {
 }
 ```
 
-### List
+#### List
 
 * **按照指定顺序存储数据**
 
@@ -38,7 +42,7 @@ fun main() {
 }
 ```
 
-### Set
+#### Set
 
 ```kotlin
 fun main() {
@@ -46,7 +50,7 @@ fun main() {
 }
 ```
 
-## Map接口
+### Map接口
 
 > 声明
 
@@ -217,9 +221,9 @@ fun main() {
 }
 ```
 
-# 6.区间与数列
+# 区间与数列
 
-> `..`顺序迭代
+> `..`闭区间
 
 ```kotlin
 fun main() {
@@ -255,7 +259,7 @@ fun main() {
 8642
 ```
 
-> `until`迭代不包含最后一个索引
+> `until`迭代不包含最后一个索引，左闭右开区间
 
 ```kotlin
 fun main() {
