--- a/Android/2.UI/1.ConstraintLayout.md
+++ b/Android/2.UI/1.ConstraintLayout.md
@@ -1,4 +1,4 @@
-# 属性
+# 基础
 
 ## 文本基线对准
 
@@ -219,4 +219,152 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_weight="4" />
 ```
+
+## 导航线
+
+![](TIM截图20200106101426.png)
+
+导航线：定义导航线，控件可以和导航线产生约束，如果导航线位置发生改变，控件的位置也会跟着改变
+
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="按钮1"
+        app:layout_constraintLeft_toRightOf="@id/gl"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="按钮2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/gl" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+```
+
+# 动画(ConstraintSet)
+
+![](a.gif)
+
+## 布局
+
+保持需要改变`View的ID`一致
+
+> 原始XML
+
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cl"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:src="@mipmap/ic_launcher"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_big"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="放大"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/btn_small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="缩小"
+        app:layout_constraintBaseline_toBaselineOf="@id/btn_big"
+        app:layout_constraintLeft_toRightOf="@id/btn_big" />
+</androidx.constraintlayout.widget.ConstraintLayout>
+```
+
+> 放大XML
+
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cl"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/iv"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:scaleType="fitXY"
+        android:src="@mipmap/ic_launcher"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
+```
+
+## Java代码
+
+```java
+class MainActivity : AppCompatActivity() {
+
+    private val smallSet = ConstraintSet()
+    private val bigSet = ConstraintSet()
+
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        setContentView(R.layout.activity_main)
+
+        smallSet.clone(cl)
+        bigSet.load(this, R.layout.view_big)
+
+        showSmall()
+        showBig()
+    }
+
+    private fun showSmall() {
+        btn_small.setOnClickListener {
+            TransitionManager.beginDelayedTransition(cl)
+            smallSet.applyTo(cl)
+        }
+    }
+
+    private fun showBig() {
+        btn_big.setOnClickListener {
+            TransitionManager.beginDelayedTransition(cl)
+            bigSet.applyTo(cl)
+        }
+    }
+}
+```
+
+
+
+
 
