--- a/Java/1.SE/3.集合.md
+++ b/Java/1.SE/3.集合.md
@@ -1,8 +1,10 @@
+
+
 # Map集合
 
 ## 遍历
 
-```
+```java
 public static void main(String[] args) {
 
         Map<String, String> map = new HashMap<String, String>();
