--- a/Java/1.SE/3.集合.md
+++ b/Java/1.SE/3.集合.md
@@ -53,7 +53,28 @@ public class Demo1Collection {
 }
 ~~~
 
-> tips: 有关Collection中的方法可不止上面这些，其他方法可以自行查看API学习。
+## 迭代器
+
+用于遍历集合每一个元素
+
+```java
+public class Test {
+    public static void main(String[] args) {
+        Collection<String> col = new ArrayList<>();
+        col.add("语文");
+        col.add("数学");
+        col.add("英语");
+
+        Iterator<String> iterator = col.iterator();
+        while (iterator.hasNext()) {
+            String next = iterator.next();
+            System.out.println(next);
+        }
+    }
+}
+```
+
+
 
 List集合
 
