--- a/Kotlin/3.协程.md
+++ b/Kotlin/3.协程.md
@@ -1,6 +1,6 @@
 # 启动协程
 
-## launch
+## launch启动
 
 * `launch`启动协程
 
@@ -16,7 +16,7 @@ class Test {
 }
 ```
 
-### launch调度器
+> launch调度器
 
 * Dispatchers.Default：不指定，即为默认
 * Dispatchers.IO：IO线程
@@ -49,8 +49,6 @@ class Demo {
     }
 }
 ```
-
-
 
 ## async启动
 
@@ -140,7 +138,7 @@ class Demo {
 结束
 ```
 
-# suspend
+## suspend
 
 * **`suspend`修饰的函数，称为挂起函数，在协程中进行调用或挂起函数中调用**
 * **协程中有多个挂起函数，它们的执行是顺序的，需要等待前一个挂起函数恢复，才能执行后面的挂起函数**
