--- a/Java/1.SE/3.集合.md
+++ b/Java/1.SE/3.集合.md
@@ -76,6 +76,16 @@ public class Test {
 
 ## List集合
 
+`java.util.List`接口继承自`Collection`接口，是单列集合的一个重要分支，习惯性地会将实现了`List`接口的对象称为List集合。在List集合中允许出现重复的元素，所有的元素是以一种线性方式进行存储的，在程序中可以通过索引来访问集合中的指定元素。另外，List集合还有一个特点就是元素有序，即元素的存入顺序和取出顺序一致
+
+List接口特点：
+
+1. 它是一个元素存取有序的集合。例如，存元素的顺序是11、22、33。那么集合中，元素的存储就是按照11、22、33的顺序完成的）。
+2. 它是一个带有索引的集合，通过索引就可以精确的操作集合中的元素（与数组的索引是一个道理）。
+3. 集合中可以有重复的元素，通过元素的equals方法，来比较是否为重复的元素
+
+
+
 List作为Collection集合的子接口，不但继承了Collection接口中的全部方法，而且还增加了一些根据元素索引来操作集合的特有方法，如下：
 
 - `public void add(int index, E element)`: 将指定的元素，添加到该集合中的指定位置上。
@@ -181,7 +191,48 @@ public class LinkedListDemo {
 }
 ~~~
 
-# 
+##  Set集合
+
+`java.util.Set`接口和`java.util.List`接口一样，同样继承自`Collection`接口，它与`Collection`接口中的方法基本一致，并没有对`Collection`接口进行功能上的扩充，只是比`Collection`接口更加严格了。与`List`接口不同的是，`Set`接口中元素无序，并且都会以某种规则保证存入的元素不出现重复。
+
+`Set`集合有多个子类，这里我们介绍其中的`java.util.HashSet`、`java.util.LinkedHashSet`这两个集合。
+
+> tips:Set集合取出元素的方式可以采用：迭代器、增强for。
+
+`java.util.HashSet`是`Set`接口的一个实现类，它所存储的元素是不可重复的，并且元素都是无序的(即存取顺序不一致)。`java.util.HashSet`底层的实现其实是一个`java.util.HashMap`支持，由于我们暂时还未学习，先做了解。
+
+`HashSet`是根据对象的哈希值来确定元素在集合中的存储位置，因此具有良好的存取和查找性能。保证元素唯一性的方式依赖于：`hashCode`与`equals`方法。
+
+我们先来使用一下Set集合存储，看下现象，再进行原理的讲解:
+
+~~~java
+public class HashSetDemo {
+    public static void main(String[] args) {
+        //创建 Set集合
+        HashSet<String>  set = new HashSet<String>();
+
+        //添加元素
+        set.add(new String("cba"));
+        set.add("abc");
+        set.add("bac"); 
+        set.add("cba");  
+        //遍历
+        for (String name : set) {
+            System.out.println(name);
+        }
+    }
+}
+~~~
+
+输出结果如下，说明集合中不能存储重复元素：
+
+~~~
+cba
+abc
+bac
+~~~
+
+
 
 Map集合
 
