--- a/Android/5.库/7.Ffmpeg.md
+++ b/Android/5.库/7.Ffmpeg.md
@@ -51,80 +51,53 @@ build_one
 
 然后通过命令`./build_android.sh`执行脚本
 
-#<center>遇到的问题
-
->fatal error: stdint.h: No such file or directory
-
-NDK r16弃用gcc，尝试使用clang工具链，换成老版本的就可以
-
-![](https://leanote.com/api/file/getImage?fileId=5c1de727ab64415e970007f1)
-
->问题如下
-
-![](https://leanote.com/api/file/getImage?fileId=5c1e793bab6441609500099f)
-
-需要修改编译脚本，网上很多脚本都是target-os=linux，需要修改成target-os=android，才能解决这个问题
-```
-#!/bin/bash
-NDK=/opt/ndk/android-ndk-r15c
-SYSROOT=$NDK/platforms/android-21/arch-arm/
-TOOLCHAIN=$NDK/toolchains/arm-linux-androideabi-4.9/prebuilt/linux-x86_64
-function build_one
-{
-./configure \
---prefix=$PREFIX \
---enable-shared \
---disable-static \
---disable-doc \
---disable-ffplay \
---disable-ffprobe \
---disable-doc \
---disable-symver \
---enable-protocol=concat \
---enable-protocol=file \
---enable-muxer=mp4 \
---enable-demuxer=mpegts \
---cross-prefix=$TOOLCHAIN/bin/arm-linux-androideabi- \
---target-os=android \
---arch=arm \
---enable-cross-compile \
---sysroot=$SYSROOT \
---extra-cflags="-Os -fpic $ADDI_CFLAGS" \
---extra-ldflags="$ADDI_LDFLAGS" \
-$ADDITIONAL_CONFIGURE_FLAG
-make clean all
-make -j3
-make install
-}
-CPU=arm
-PREFIX=$(pwd)/android/$CPU
-ADDI_CFLAGS="-marm"
-build_one
-```
-
->ffmpeg库组成
+# 简介
 
 * libavutil
-libavutil库是一个实用程序库，以辅助多媒体编程。 它包含安全可移植字符串函数，随机数生成器，数据结构，附加数学函数，加密和多媒体相关功能。 它不是 libavcodec 和 libavformat 所需的代码的库。
-这个库的目标是：模块化 它应该具有很少的相互依赖性和在 ./configure 期间禁用单个部件的可能性。小 源和对象都应该小。高效 它应该具有低CPU和内存使用。有用 它应该添加人们很需要的功能。
+  libavutil库是一个实用程序库，以辅助多媒体编程。 它包含安全可移植字符串函数，随机数生成器，数据结构，附加数学函数，加密和多媒体相关功能。 它不是 libavcodec 和 libavformat 所需的代码的库。
+  这个库的目标是：模块化 它应该具有很少的相互依赖性和在 ./configure 期间禁用单个部件的可能性。小 源和对象都应该小。高效 它应该具有低CPU和内存使用。有用 它应该添加人们很需要的功能。
 * libavcodec
-libavcodec 库提供通用编码/解码框架，并包含用于音频，视频和字幕流的多个解码器和编码器，以及多个比特流滤波器。
-共享架构提供从比特流 i/o 到 dsp 优化的各种服务，并且使得它适合于实现健壮和快速的编解码器。
+  libavcodec 库提供通用编码/解码框架，并包含用于音频，视频和字幕流的多个解码器和编码器，以及多个比特流滤波器。
+  共享架构提供从比特流 i/o 到 dsp 优化的各种服务，并且使得它适合于实现健壮和快速的编解码器。
 * libavformat
-libavformat 库为音频、视频和字幕流的复用和解复用（多路复用和解复用）提供了一个通用框架。 它包括多媒体容器格式的多个多路复用器和多路分解器。
-它还支持几种输入和输出协议来访问媒体资源。
+  libavformat 库为音频、视频和字幕流的复用和解复用（多路复用和解复用）提供了一个通用框架。 它包括多媒体容器格式的多个多路复用器和多路分解器。
+  它还支持几种输入和输出协议来访问媒体资源。
 * libavdevice
-libavdevice 库提供了一个通用框架，用于从许多常见的多媒体输入/输出设备抓取和渲染，并支持多个输入和输出设备，包括 Video4Linux2，VfW，DShow和ALSA
+  libavdevice 库提供了一个通用框架，用于从许多常见的多媒体输入/输出设备抓取和渲染，并支持多个输入和输出设备，包括 Video4Linux2，VfW，DShow和ALSA
 * libavfilter
-libavfilter 库提供了一个通用的音频/视频过滤框架，包含几个过滤器，源和接收器模块
+  libavfilter 库提供了一个通用的音频/视频过滤框架，包含几个过滤器，源和接收器模块
 * libswscale
-libswscale 库执行高度优化的图像缩放和颜色空间和像素格式转换操作。
-具体来说，此库执行以下转换：
-重新调整：是更改视频大小的过程。 有几个重新调整选项和算法可用。 这通常是有损耗的过程。像素格式转换：是转换图像的图像格式和颜色空间的过程，例如从平面 YUV420P 到 RGB24 转换。 它还可以处理 packed 转换，即从 packed 布局（属于在同一缓冲器中交织的不同平面的所有像素）转换为平面布局（属于存储在专用缓冲器或“平面”中的相同平面的所有样本）的转换。如果源和目标颜色空间不同，这通常是有损过程
+  libswscale 库执行高度优化的图像缩放和颜色空间和像素格式转换操作。
+  具体来说，此库执行以下转换：
+  重新调整：是更改视频大小的过程。 有几个重新调整选项和算法可用。 这通常是有损耗的过程。像素格式转换：是转换图像的图像格式和颜色空间的过程，例如从平面 YUV420P 到 RGB24 转换。 它还可以处理 packed 转换，即从 packed 布局（属于在同一缓冲器中交织的不同平面的所有像素）转换为平面布局（属于存储在专用缓冲器或“平面”中的相同平面的所有样本）的转换。如果源和目标颜色空间不同，这通常是有损过程
 * libswresample
-libswresample 库执行高度优化的音频重采样，重新矩阵化和样本格式转换操作。
-具体来说，此库执行以下转换：
-重新采样：是改变音频速率的过程，例如从 44100Hz 的高采样率到 8000Hz 。从高到低采样率的音频转换是有损耗的过程。有几个重采样选项和算法可用。格式转换：是将采样类型（例如从16位有符号采样转换为无符号8位或浮点采样）的过程。当从 packed 布局（所有属于在相同缓冲器中交错的不同通道的样本）到平面布局（属于存储在专用缓冲器或“平面”中的相同通道的所有样本）时，它还处理 packed 转换。重新矩阵化：是改变通道布局的过程，例如从立体声到单声道。当输入通道不能映射到输出流时，该过程是有损的，因为它涉及不同的增益因子和混合。通过专用选项启用各种其他音频转换（例如拉伸和填充）
+  libswresample 库执行高度优化的音频重采样，重新矩阵化和样本格式转换操作。
+  具体来说，此库执行以下转换：
+  重新采样：是改变音频速率的过程，例如从 44100Hz 的高采样率到 8000Hz 。从高到低采样率的音频转换是有损耗的过程。有几个重采样选项和算法可用。格式转换：是将采样类型（例如从16位有符号采样转换为无符号8位或浮点采样）的过程。当从 packed 布局（所有属于在相同缓冲器中交错的不同通道的样本）到平面布局（属于存储在专用缓冲器或“平面”中的相同通道的所有样本）时，它还处理 packed 转换。重新矩阵化：是改变通道布局的过程，例如从立体声到单声道。当输入通道不能映射到输出流时，该过程是有损的，因为它涉及不同的增益因子和混合。通过专用选项启用各种其他音频转换（例如拉伸和填充）
+
+# 使用Ffmpeg
+
+头文件导入`cpp`文件夹，`so`文件导入`jniLibs`文件夹中
+
+![](TIM截图20200302102633.png)
+
+## 获取Ffmpeg版本号
+
+```c++
+#include <jni.h>
+#include <string>
+
+//使用C的头文件，需要extern "C"{...}包裹起来
+extern "C" {
+#include "include/libavutil/avutil.h"
+}
+
+extern "C" JNIEXPORT jstring JNICALL
+Java_com_aib_ffmpeg_MainActivity_stringFromJNI(JNIEnv *env, jobject) {
+    const char *version = av_version_info();    //获取Ffmpeg版本号
+    return env->NewStringUTF(version);
+}
+```
 
 # 命令
 
