--- a/Java/1.SE/3.集合.md
+++ b/Java/1.SE/3.集合.md
@@ -199,6 +199,8 @@ public class LinkedListDemo {
 
 > tips:Set集合取出元素的方式可以采用：迭代器、增强for。
 
+### HashSet集合
+
 `java.util.HashSet`是`Set`接口的一个实现类，它所存储的元素是不可重复的，并且元素都是无序的(即存取顺序不一致)。`java.util.HashSet`底层的实现其实是一个`java.util.HashMap`支持，由于我们暂时还未学习，先做了解。
 
 `HashSet`是根据对象的哈希值来确定元素在集合中的存储位置，因此具有良好的存取和查找性能。保证元素唯一性的方式依赖于：`hashCode`与`equals`方法。
@@ -231,6 +233,56 @@ cba
 abc
 bac
 ~~~
+
+> Set集合存储自定义数据结构
+
+`Java`基本数据类型，都重写了`hashCode`和`equals`，所以`Set`集合存储基本数据类型，则可以体现数据不重复的特性，自定义的数据类型不会体现这特性，如果需要体现不重复特性，需要重写自定义类型的`hashCode`和`equals`方法
+
+```java
+/**
+ * 重写equals和hashCode
+ */
+public class Person {
+    private String name;
+
+    public Person(String name) {
+        this.name = name;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        Person person = (Person) o;
+        return Objects.equals(name, person.name);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(name);
+    }
+
+    @Override
+    public String toString() {
+        return "Person{" +
+                "name='" + name + '\'' +
+                '}';
+    }
+}
+```
+
+```java
+public class Test {
+    public static void main(String[] args) {
+
+        HashSet<Person> set = new HashSet<>();
+        set.add(new Person("小白"));
+        set.add(new Person("小白"));
+
+        System.out.println(set.toString());
+    }
+}
+```
 
 
 
